--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -45,7 +45,15 @@
     </div>
   </div>
 </div>
-<div class="linksbar"><img src="/media/resimler/linkler/hepsi.png" width="929" height="71" /></div>
+<div class="linksbar"><img src="/media/resimler/linkler/hepsi.png" width="929" height="71" usemap="#barmap" />
+<map id="barmap" name="barmap">
+  <area shape="rect" href="/iletisim/" coords="741,0,928,70" />
+  <area shape="rect" href="/yasal/" coords="552,0,739,70" />
+  <area shape="rect" href="/kariyer/" coords="366,0,550,70" />
+  <area shape="rect" href="/basin/" coords="182,0,364,70" />
+  <area shape="rect" href="http://uekae.tubitak.gov.tr" coords="0,0,180,70" />
+</map>
+</div>
   <div class="footer">
     <div class="copy">Copyright 2006 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.<span class="footerNav">Ürünler   /   Hizmetler   /   Hakkında   /   Basın</span></div>
     <div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; Kullanım Şartları&nbsp;&nbsp;&nbsp;&nbsp;Gizlilik Politikası</div>
