--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -9,9 +9,9 @@
     {% block extrahead %}{% endblock %}
 </head>
 <body>
-<div class="header"> <a class="parduslogo" href="#"></a>
+<div class="header"> <a class="parduslogo" href="/"></a>
   <div class="menu">
-    <div class="linkler"> <a class="mUrun" href="#"></a> <a class="mHizmet" href="#"></a> <a class="mHakkinda" href="#"></a> <a class="mBasin" href="#"></a> </div>
+    <div class="linkler"> <a class="mUrun" href="/urunler/"></a> <a class="mHizmet" href="/hizmetler/"></a> <a class="mHakkinda" href="/hakkinda/"></a> <a class="mBasin" href="/basin/"></a> </div>
     <a class="mDil" href="#"></a> </div>
 </div>
 <div id="wrapper">
