--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -55,8 +55,8 @@
 </map>
 </div>
   <div class="footer">
-    <div class="copy">Copyright 2006 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.<span class="footerNav">Ürünler   /   Hizmetler   /   Hakkında   /   Basın</span></div>
-    <div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; Kullanım Şartları&nbsp;&nbsp;&nbsp;&nbsp;Gizlilik Politikası</div>
+      <div class="copy">Copyright 2006 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.<span class="footerNav"><a href="/urunler/">Ürünler</a>   /   <a href="/hizmetler/">Hizmetler</a>   /   <a href="/hakkinda/">Hakkında</a>   /   <a href="/basin/">Basın</a></span></div>
+    <div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; <a href="/kullanim_sartlari/">Kullanım Şartları</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/gizlilik_politikasi/">Gizlilik Politikası</div>
   </div>
   </div>
 </body>
