--- a/web/chiq/templates/basin/bultenlervegorseller.html
+++ b/web/chiq/templates/basin/bultenlervegorseller.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="basin_ust">
-    <a href="/basin/">Bültenler ve Görseller</a>
-    <a href="/basin/2005/">Basında Pardus</a>
+    <div class="basin_ust_baslik"><a href="/basin/">Bültenler ve Görseller</a></div>
+    <div class="basin_ust_baslik basin_ust_baslik_secili"><a href="/basin/2005/">Basında Pardus</a></div>
 </div>
 <div class="gorsel_kutusu">
     <img src="/media/resimler/basin/logotescil.png" alt="pardus logo" />
