--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -48,11 +48,11 @@
 {% endblock %}
 </div>
 <div class="linksbar">
-    <a href="http://uekae.tubitak.gov.tr"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></a>
-    <a href="/basin/"><img src="/media/resimler/altmenu/02.png" alt="Basın" /></a>
-    <a href="/kariyer/"><img src="/media/resimler/altmenu/03.png" alt="Kariyer" /></a>
-    <a href="/yasal/"><img src="/media/resimler/altmenu/04.png" alt="Yasal" /></a>
-    <a href="/iletisim/"><img src="/media/resimler/altmenu/05.png" alt="İletişim" /></a>
+    <a href="http://uekae.tubitak.gov.tr"><div class="altbolum_resim"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_sag"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/tubitakuekae.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_yazi">Enstitümüz hakkında merak edilenler</div></div></a>
+    <a href="/basin/"><div class="altbolum_resim"><img src="/media/resimler/altmenu/02.png" alt="Basın" /></div><div class="altbolum_sag"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/basin.png" alt="Basın" /></div><div class="altbolum_yazi">Pardus basın bültenleri ve hakkımızda yazılanlar</div></div></a>
+    <a href="/kariyer/"><div class="altbolum_resim"><img src="/media/resimler/altmenu/03.png" alt="Kariyer" /></div><div class="altbolum_sag"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/kariyer.png" alt="Kariyer" /></div><div class="altbolum_yazi">Pardus Projesi'nde çalışmak mı istiyorsunuz?</div></div></a>
+    <a href="/yasal/"><div class="altbolum_resim"><img src="/media/resimler/altmenu/04.png" alt="Yasal" /></div><div class="altbolum_sag"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/yasal.png" alt="Yasal" /></div><div class="altbolum_yazi">Gizlilik politikamız ve telif hakları</div></div></a>
+    <a href="/iletisim/"><div class="altbolum_resim"><img src="/media/resimler/altmenu/05.png" alt="İletişim" /></div><div class="altbolum_sag"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/iletisim.png" alt="İletişim" /></div><div class="altbolum_yazi">Pardus Projesi ile nasıl iletişime geçebilirsiniz?</div></div></a>
 </div>
   <div class="footer">
       <div class="copy">Copyright 2006 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.<span class="footerNav"><a href="/urunler/">Ürünler</a>   /   <a href="/hizmetler/">Hizmetler</a>   /   <a href="/hakkinda/">Hakkında</a></span></div>
