--- a/web/chiq/templates/basin/bultenlervegorseller.html
+++ b/web/chiq/templates/basin/bultenlervegorseller.html
@@ -5,12 +5,14 @@
     <div class="basin_ust_baslik"><a href="/basin/2005/">Basında Pardus</a></div>
 </div>
 <div class="gorsel_kutusu">
+    <div class="gorsel_kutusu_satir">
     <img src="/media/resimler/basin/logotescil.png" alt="pardus logo" />
     <div class="gorsel_kutusu_sag">
         <b>Pardus Tescilli Logoları</b><br />
         (JPG, EPS, PNG, SVG, AI)
     </div>
-    <hr />
+    </div>
+    <div class="gorsel_kutusu_satir">
     <img src="/media/resimler/basin/cd2009gobek.png" alt="pardus 2009" />
     <div class="gorsel_kutusu_sag">
         <b>Pardus 2009 CD Göbekleri</b><br /><br />
@@ -19,7 +21,7 @@
         <b>Çalışan CD</b><br />
         <p>(JPG, EPS, PNG, SVG, AI)</p>
     </div>
-    <hr />
+    </div>
     <img src="/media/resimler/basin/banner.png" alt="pardus banner" />
     <b>Web Siteniz İçin</b><br />
     <p>Pardus Banner ve Düğmeleri</p>
