--- a/web/chiq/templates/base.html
+++ b/web/chiq/templates/base.html
@@ -55,8 +55,7 @@
     <a href="/iletisim/"><div class="altbolum_resim"><img src="/media/resimler/altmenu/05.png" alt="İletişim" /></div><div class="altbolum_sag"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/iletisim.png" alt="İletişim" /></div><div class="altbolum_yazi">Pardus Projesi ile nasıl iletişime geçebilirsiniz?</div></div></a>
 </div>
   <div class="footer">
-      <div class="copy">Copyright 2006 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.<span class="footerNav"><a href="/urunler/">Ürünler</a>   /   <a href="/hizmetler/">Hizmetler</a>   /   <a href="/hakkinda/">Hakkında</a></span></div>
-    <div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; <a href="/kullanim_sartlari/">Kullanım Şartları</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/gizlilik_politikasi/">Gizlilik Politikası</div>
+      <div class="copy"><div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; <a href="/kullanim_sartlari/">Kullanım Şartları</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/gizlilik_politikasi/">Gizlilik Politikası</div><span class="footerNav"><a href="/urunler/">Ürünler</a>   /   <a href="/hizmetler/">Hizmetler</a>   /   <a href="/hakkinda/">Hakkında</a></span></div>
   </div>
   </div>
 </body>
