--- a/trunk/web/chiq/media/css/stil.css
+++ b/trunk/web/chiq/media/css/stil.css
@@ -52,7 +52,7 @@ body {
 	margin-right: 5px;
 }
 .footerNav {
-	margin-left:340px;
+	float: right;
 }
 .footer {
 	background-image: url(/media/resimler/footerarkaplan.png);
@@ -192,8 +192,11 @@ body {
 }
 .copy {
 	padding-bottom:10px;
+    width: 100%;
+    overflow: hidden;
 }
 .adres {
+    float: left;
 }
 .footerDil {
 	float:right;
