--- a/trunk/web/chiq/templates/base.html
+++ b/trunk/web/chiq/templates/base.html
@@ -11,7 +11,7 @@
 <body>
 <div class="header"> <a class="parduslogo" href="/"></a>
   <div class="menu">
-    <div class="linkler"> <a class="mUrun" href="/urunler/"></a> <a class="mHizmet" href="#"></a> <a class="mHakkinda" href="/hakkinda/"></a> </div>
+    <div class="linkler"> <a class="mUrun" href="/products/"></a> <a class="mHizmet" href="#"></a> <a class="mHakkinda" href="/about/"></a> </div>
     <a class="mDil" href="#"></a> </div>
 </div>
 <div id="wrapper">
@@ -21,9 +21,9 @@
 {% endblock %}
   </div>
 {% block sidebar %}
-  <div class="sidebar"><a href="/indir/"><img src="/media/resimler/sidebar/indirdownload.png" /></a><br />
+  <div class="sidebar"><a href="/download/"><img src="/media/resimler/sidebar/indirdownload.png" /></a><br />
     <div class="search">
-        <form method="POST" action="/arama/">
+        <form method="POST" action="/search/">
             <input type="text" name="term" />
             <input type="submit" name="searchform" value="">
         </form>
@@ -31,34 +31,34 @@
     <div class="features">
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/destek.png" width="40" height="50" /></div>
-        <div class="featureText"> <span class="fbaslik"><a href="/kilavuz/">Kurulum Kılavuzu</a></span><br/>
-            <span class="ftext">Ekran görüntüleriyle<br/> adım adım kurulum ve kullanım kılavuzu</span> </div>
+        <div class="featureText"> <span class="fbaslik"><a href="/guide/">Installation Guide</a></span><br/>
+            <span class="ftext">Step by step installation and usage guide <br /> with screen shots.</span> </div>
       </div>
       <div class="fayrac"></div>
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/destek.png" width="40" height="50" /></div>
-        <div class="featureText"> <span class="fbaslik"><a href="/destek/">Destek Alın</a></span><br/>
-            <span class="ftext">Pardus desteği için topluluk kaynaklarımıza başvurabilirsiniz.</span> </div>
+        <div class="featureText"> <span class="fbaslik"><a href="/support/">Get Support</a></span><br/>
+            <span class="ftext">You can make use of community sources for Pardus support.</span> </div>
       </div>
       <div class="fayrac"></div>
       <div class="featuresList">
         <div class="featurePic"><img src="/media/resimler/sidebar/features/tanit.png" width="40" height="50" /></div>
-        <div class="featureText"> <span class="fbaslik"><a href="/banner/">Pardus'u Tanıtın</a></span><br/>
-            <span class="ftext">Pardus'un tanıtımına katkıda bulunmak için Pardus afiş ve düğmeleri</span> </div>
+        <div class="featureText"> <span class="fbaslik"><a href="/banner/">Spread Pardus</a></span><br/>
+            <span class="ftext">Banners and buttons for spreading Pardus</span> </div>
       </div>
     </div>
   </div>
 {% endblock %}
 </div>
 <div class="linksbar">
-    <a href="http://uekae.tubitak.gov.tr"><div class="altbolum_resim1"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_sag1"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/tubitakuekae.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_yazi">Enstitümüz hakkında <br />merak edilenler</div></div></a>
-    <a href="/basin/"><div class="altbolum_resim2"><img src="/media/resimler/altmenu/02.png" alt="Basın" /></div><div class="altbolum_sag2"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/basin.png" alt="Basın" /></div><div class="altbolum_yazi">Pardus basın bültenleri <br />ve hakkımızda yazılanlar</div></div></a>
-    <a href="/kariyer/"><div class="altbolum_resim3"><img src="/media/resimler/altmenu/03.png" alt="Kariyer" /></div><div class="altbolum_sag3"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/kariyer.png" alt="Kariyer" /></div><div class="altbolum_yazi">Pardus Projesi'nde <br />çalışmak için</div></div></a>
-    <a href="/yasal/"><div class="altbolum_resim4"><img src="/media/resimler/altmenu/04.png" alt="Yasal" /></div><div class="altbolum_sag4"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/yasal.png" alt="Yasal" /></div><div class="altbolum_yazi">Gizlilik politikamız<br /> ve telif hakları</div></div></a>
-    <a href="/iletisim/"><div class="altbolum_resim5"><img src="/media/resimler/altmenu/05.png" alt="İletişim" /></div><div class="altbolum_sag5"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/iletisim.png" alt="İletişim" /></div><div class="altbolum_yazi">Pardus Projesi ile nasıl iletişime geçebilirsiniz?</div></div></a>
+    <a href="http://uekae.tubitak.gov.tr"><div class="altbolum_resim1"><img src="/media/resimler/altmenu/01.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_sag1"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/tubitakuekae.png" alt="TÜBİTAK/UEKAE" /></div><div class="altbolum_yazi">About our<br />institution</div></div></a>
+    <a href="/press/"><div class="altbolum_resim2"><img src="/media/resimler/altmenu/02.png" alt="Press" /></div><div class="altbolum_sag2"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/basin.png" alt="Press" /></div><div class="altbolum_yazi">Pardus news in press</div></div></a>
+    <a href="/career/"><div class="altbolum_resim3"><img src="/media/resimler/altmenu/03.png" alt="Career" /></div><div class="altbolum_sag3"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/kariyer.png" alt="Career" /></div><div class="altbolum_yazi">To work <br />in Pardus</div></div></a>
+    <a href="/legal/"><div class="altbolum_resim4"><img src="/media/resimler/altmenu/04.png" alt="Legall" /></div><div class="altbolum_sag4"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/yasal.png" alt="Legal" /></div><div class="altbolum_yazi">Privacy policy <br />and copyrights</div></div></a>
+    <a href="/contact/"><div class="altbolum_resim5"><img src="/media/resimler/altmenu/05.png" alt="İletişim" /></div><div class="altbolum_sag5"><div class="altbolum_baslik"><img src="/media/resimler/altmenu/iletisim.png" alt="Contact Us" /></div><div class="altbolum_yazi">How to contact with Pardus Project?</div></div></a>
 </div>
   <div class="footer">
-      <div class="copy"><div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; <a href="/yasal/">Yasal Uyarılar</a></div><span class="footerNav"><a href="/urunler/">Ürünler</a>   /   <a href="/hizmetler/">Hizmetler</a>   /   <a href="/hakkinda/">Hakkında</a></span></div>
+      <div class="copy"><div class="adres">TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli. &nbsp;&nbsp;&nbsp;&nbsp; <a href="/yasal/">Legal</a></div><span class="footerNav"><a href="/products/">Products</a>   /   <a href="/services/">Services</a>   /   <a href="/hakkinda/">About Us</a></span></div>
   </div>
   </div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
